# gtk-run

./: Makefile.am  autogen.sh  configure.ac  gtkrun.geany
src/: Makefile.am  gtk-run.c
